修复移动端下单CORS问题，优化服务配置，清理临时文件

--- a/apps/h5-client/src/i18n/locales/ar-SA.json
+++ b/apps/h5-client/src/i18n/locales/ar-SA.json
@@ -33,8 +33,10 @@
     "categories": "فئات المنتجات"
   },
   "category": {
-    "title": "الفئات",
-    "all": "الكل"
+    "title": "الأقسام",
+    "all": "الكل",
+    "noProducts": "لا توجد منتجات متاحة",
+    "noSearchResults": "لا توجد نتائج بحث"
   },
   "product": {
     "detail": "تفاصيل المنتج",
