--- a/apps/h5-client/src/i18n/locales/es-ES.json
+++ b/apps/h5-client/src/i18n/locales/es-ES.json
@@ -34,7 +34,9 @@
   },
   "category": {
     "title": "Categoría",
-    "all": "Todo"
+    "all": "Todo",
+    "noProducts": "No hay productos disponibles",
+    "noSearchResults": "No hay resultados de búsqueda"
   },
   "product": {
     "detail": "Detalles del producto",
