--- a/apps/h5-client/src/i18n/locales/pt-BR.json
+++ b/apps/h5-client/src/i18n/locales/pt-BR.json
@@ -34,7 +34,9 @@
   },
   "category": {
     "title": "Categoria",
-    "all": "Todos"
+    "all": "Todos",
+    "noProducts": "Nenhum produto disponível",
+    "noSearchResults": "Nenhum resultado de pesquisa"
   },
   "product": {
     "detail": "Detalhes do produto",
