更新微信加载,名称自适应

--- a/apps/h5-client/src/i18n/locales/ar-SA.json
+++ b/apps/h5-client/src/i18n/locales/ar-SA.json
@@ -36,7 +36,8 @@
     "title": "الأقسام",
     "all": "الكل",
     "noProducts": "لا توجد منتجات متاحة",
-    "noSearchResults": "لا توجد نتائج بحث"
+    "noSearchResults": "لا توجد نتائج بحث",
+    "searchPlaceholder": "البحث عن المنتجات"
   },
   "product": {
     "detail": "تفاصيل المنتج",
