--- a/apps/h5-client/src/i18n/locales/es-ES.json
+++ b/apps/h5-client/src/i18n/locales/es-ES.json
@@ -36,7 +36,8 @@
     "title": "Categoría",
     "all": "Todo",
     "noProducts": "No hay productos disponibles",
-    "noSearchResults": "No hay resultados de búsqueda"
+    "noSearchResults": "No hay resultados de búsqueda",
+    "searchPlaceholder": "Buscar productos"
   },
   "product": {
     "detail": "Detalles del producto",
