--- a/apps/h5-client/src/i18n/locales/pt-BR.json
+++ b/apps/h5-client/src/i18n/locales/pt-BR.json
@@ -36,7 +36,8 @@
     "title": "Categoria",
     "all": "Todos",
     "noProducts": "Nenhum produto disponível",
-    "noSearchResults": "Nenhum resultado de pesquisa"
+    "noSearchResults": "Nenhum resultado de pesquisa",
+    "searchPlaceholder": "Pesquisar produtos"
   },
   "product": {
     "detail": "Detalhes do produto",
