--- a/apps/h5-client/src/i18n/locales/zh-CN.json
+++ b/apps/h5-client/src/i18n/locales/zh-CN.json
@@ -36,7 +36,8 @@
     "title": "分类",
     "all": "全部",
     "noProducts": "暂无商品",
-    "noSearchResults": "暂无搜索结果"
+    "noSearchResults": "暂无搜索结果",
+    "searchPlaceholder": "搜索商品"
   },
   "product": {
     "detail": "商品详情",
